# taskrs

./: .gitignore  Cargo.toml
taskrs-api/: .env  .gitignore  Cargo.toml
taskrs-api/config/: taskrs.sample.yaml  taskrs.yaml
taskrs-api/src/: application.rs  config.rs  logging.rs  main.rs  permissions.rs  seeding.rs
taskrs-api/src/api/: error.rs  mod.rs  requester.rs
taskrs-api/src/api/auth/: actions.rs  controller.rs  error.rs  mod.rs
taskrs-api/src/dtos/: login_user.rs  mod.rs  token.rs  token_data.rs
taskrs-core/: Cargo.toml  build.rs
taskrs-core/src/: error.rs  lib.rs  seeding.rs
taskrs-core/src/logic/: auth.rs  mod.rs  permission.rs  refresh_token.rs  role.rs  role_permission.rs  user.rs  user_permission.rs  user_role.rs
taskrs-core/src/models/: auth.rs  mod.rs  permission.rs  refresh_token.rs  role.rs  role_permission.rs  user.rs  user_permission.rs  user_role.rs
taskrs-db/: Cargo.toml
taskrs-db/src/: connection.rs  lib.rs  utils.rs
taskrs-db/src/actions/: access_control.rs  errors.rs  mod.rs  permissions.rs  refresh_tokens.rs  roles.rs  users.rs
taskrs-db/src/migrations/: create_refresh_tokens.rs  create_role_based_access_control.rs  create_users.rs  mod.rs
taskrs-db/src/models/: mod.rs  permission.rs  refresh_token.rs  role.rs  role_permission.rs  user.rs  user_permission.rs  user_role.rs
taskrs-db/src/models/permission/: dtos.rs  mod.rs
taskrs-db/src/models/refresh_token/: dtos.rs  mod.rs
taskrs-db/src/models/role/: dtos.rs  mod.rs
taskrs-db/src/models/role_permission/: dtos.rs  mod.rs
taskrs-db/src/models/user/: dtos.rs  mod.rs
taskrs-db/src/models/user_permission/: dtos.rs  mod.rs
taskrs-db/src/models/user_role/: dtos.rs  mod.rs
taskrs-web/: angular.json  package.json
taskrs-web/src/: index.html  styles.scss
taskrs-web/src/app/: _theme.scss  app.component.ts  app.module.ts
taskrs-web/src/app/core/components/page-scaffold/: page-scaffold.component.html  page-scaffold.component.scss  page-scaffold.component.ts
taskrs-web/src/app/core/enums/: storage-key.ts  theme.ts
taskrs-web/src/app/core/services/: local-storage.service.ts  theme.service.ts
taskrs-web/src/app/shared/: material.module.ts  shared.module.ts
taskrs-web/src/styles/: _theme.scss
