[package]
name = "taskrs-db"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite", "mysql", "posgres", "runtime-tokio-rustls"]
debug-sql = ["sea-orm/debug-print"]
sqlite = ["sea-orm/sqlx-sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
posgres = ["sea-orm/sqlx-postgres"]
# Runtimes
runtime-async-std-native-tls = ["sea-orm/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sea-orm/runtime-async-std-rustls"]
runtime-actix-native-tls = ["sea-orm/runtime-actix-native-tls"]
runtime-actix-rustls = ["sea-orm/runtime-actix-rustls"]
runtime-tokio-native-tls = ["sea-orm/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sea-orm/runtime-tokio-rustls"]

[dependencies]
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.132", features = ["derive"] }
tracing = "0.1.29"

[dependencies.sea-orm]
version = "0.5.0"
features = ["macros", "mock", "with-json", "with-chrono", "with-rust_decimal", "with-uuid"]
default-features = false